# api/api.go
@@ -13,11 +13,10 @@ func NewGin(h *handler.Handler) *gin.Engine {
 	router.GET("api/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	
 	router.POST("/songs", h.AddSong)
-	router.GET("/songs", h.GetSongs)
 	router.GET("/songs/all", h.GetAll)
 	router.DELETE("/songs/:id", h.DeleteSong)
 	router.PUT("/songs/:id", h.UpdateSong)
-	router.GET("/songs/:id/verse/:verseNum", h.GetSongText)
+	router.GET("/songs/:id/verse/:verse_num", h.GetSongText)
 
 
 	return router
