# docs/swagger.json
@@ -5,64 +5,6 @@
     },
     "paths": {
         "/songs": {
-            "get": {
-                "description": "Get songs from the library",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "songs"
-                ],
-                "summary": "Get songs",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Group name",
-                        "name": "group_name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Song name",
-                        "name": "song_name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Page number",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Page size",
-                        "name": "page_size",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Song"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {}
-                    }
-                }
-            },
             "post": {
                 "description": "Add new song to the library",
                 "consumes": [
@@ -185,24 +127,45 @@
                         "type": "string",
                         "description": "Song ID",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
-                        "description": "Song data",
-                        "name": "song",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UpdateSongRequest"
-                        }
+                        "type": "string",
+                        "description": "Group Name",
+                        "name": "group_name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Song Name",
+                        "name": "song_name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Release Date",
+                        "name": "release_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Text",
+                        "name": "text",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Link",
+                        "name": "link",
+                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AddSongResponse"
+                            "$ref": "#/definitions/models.UpdateSongResponse"
                         }
                     },
                     "400": {
@@ -229,10 +192,10 @@
                 "summary": "Delete song",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Song ID",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -240,7 +203,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AddSongResponse"
+                            "$ref": "#/definitions/models.DeleteSongResponse"
                         }
                     },
                     "400": {
@@ -272,14 +235,14 @@
                         "type": "string",
                         "description": "Song ID",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "description": "Verse number",
-                        "name": "verseNum",
-                        "in": "path",
+                        "description": "Verse Number",
+                        "name": "verse_num",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -345,6 +308,17 @@
                 }
             }
         },
+        "models.DeleteSongResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "models.Song": {
             "type": "object",
             "properties": {
@@ -381,26 +355,14 @@
                 }
             }
         },
-        "models.UpdateSongRequest": {
+        "models.UpdateSongResponse": {
             "type": "object",
             "properties": {
-                "group_name": {
+                "message": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "string"
-                },
-                "link": {
-                    "type": "string"
-                },
-                "release_date": {
-                    "type": "string"
-                },
-                "song_name": {
-                    "type": "string"
-                },
-                "text": {
-                    "type": "string"
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
